# teach

./: pyproject.toml  requirements.txt
deployment/: url_add.py
jupyter_extensions/config/: jupyter_notebook_config.py
jupyter_extensions/server_extension/: main.py
teach/: __init__.py
teach/static/teach/js/: reveal-init.js
teach/templates/: teach_base.html
teach/templates/teach/: reveal_base.html
